# strivo

./: CHANGELOG.md  Cargo.toml  PLUGINS_PRIVATE.md  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
crates/ab-render/: Cargo.toml  README.md
crates/ab-render/src/: lib.rs
crates/automation/: README.md
crates/automation/src/: lib.rs
crates/beat-detect/: README.md
crates/beat-detect/src/: lib.rs
crates/branding/: README.md
crates/branding/src/: lib.rs
crates/brandsafe/: README.md
crates/brandsafe/src/: lib.rs
crates/broll/: README.md
crates/broll/src/: lib.rs
crates/captions/: README.md
crates/captions/src/: lib.rs
crates/casebook/: README.md
crates/casebook/src/: lib.rs
crates/chapters/: Cargo.toml  README.md
crates/chapters/src/: lib.rs  store.rs
crates/chat/: README.md
crates/chat-density/: README.md
crates/chat-density/src/: lib.rs
crates/chat/src/: lib.rs
crates/clipper/: Cargo.toml  README.md
crates/clipper/src/: lib.rs  store.rs
crates/cuepoints/: Cargo.toml  README.md
crates/cuepoints/src/: lib.rs  store.rs
crates/dataviz/: Cargo.toml
crates/dataviz/src/: lib.rs
crates/deadair/: README.md
crates/deadair/src/: lib.rs
crates/demucs-split/: Cargo.toml  README.md
crates/demucs-split/src/: lib.rs
crates/editor/: Cargo.toml  README.md
crates/editor/src/: lib.rs  store.rs
crates/heatmap/: README.md
crates/heatmap/src/: lib.rs
crates/insert-fx/: README.md
crates/insights-compare/: README.md
crates/insights-compare/src/: lib.rs
crates/loudness/: README.md
crates/loudness/src/: lib.rs
crates/marketplace/: Cargo.toml  README.md
crates/marketplace/src/: lib.rs
crates/multistream/: README.md
crates/multistream/src/: lib.rs
crates/multitrack/: README.md
crates/multitrack/src/: lib.rs
crates/pipelines-dag/: README.md
crates/pipelines-dag/src/: lib.rs
crates/pitch/: Cargo.toml  README.md
crates/pitch/src/: lib.rs
crates/reuse/: Cargo.toml  README.md
crates/reuse/src/: lib.rs  store.rs
crates/scenes/: Cargo.toml  README.md
crates/scenes/src/: lib.rs
crates/schedule-optimizer/: README.md
crates/schedule-optimizer/src/: lib.rs
crates/sidechain/: Cargo.toml  README.md
crates/sidechain/src/: lib.rs
crates/strivo-bin/: Cargo.toml  README.md
crates/strivo-bin/src/: cli.rs  main.rs
crates/strivo-plugins/: Cargo.toml
crates/strivo-plugins/src/archiver/: db.rs  downloader.rs  mod.rs  scanner.rs  templates.rs
crates/strivo-plugins/src/crunchr/: cluster.rs  db.rs  embed.rs  mod.rs  pipeline.rs  presets.rs  runner.rs
crates/strivo-plugins/src/crunchr/transcribe/: voxtral_api.rs
crates/strivo-plugins/src/editor/: concat.rs  filter.rs  mod.rs
crates/strivo-plugins/src/insights/: frequency.rs  mod.rs  speakers.rs  topics.rs
crates/strivo-plugins/src/viewguard/: mod.rs  score.rs  stats.rs  store.rs
crates/strivo-plugins/src/viewguard/detectors/: benford.rs  mod.rs  plateau.rs  spike.rs
crates/strivo-web/: Cargo.toml  build.rs
crates/strivo-web/assets/: spa.css  spa.html  spa.js
crates/strivo-web/assets/icons/candy/: ATTRIBUTION.md
crates/strivo-web/e2e/: mock-server.mjs
crates/strivo-web/e2e/tests/: smoke.spec.ts
crates/strivo-web/src/: assets.rs  auth.rs  csrf.rs  ipc_client.rs  lib.rs  ratelimit.rs  server.rs
crates/strivo-web/src/routes/: api.rs  assets.rs  events.rs  licence.rs  login.rs  logs.rs  mod.rs  plugins.rs  recordings.rs
crates/strivo-web/tests/: plugins_data.rs  routes.rs
crates/structure/: README.md
crates/structure/src/: lib.rs
crates/submix/: Cargo.toml  README.md
crates/submix/src/: lib.rs
crates/thumbnails/: Cargo.toml  README.md
crates/thumbnails/src/: lib.rs  store.rs
crates/vad/: README.md
crates/vad/src/: lib.rs
crates/viewguard-trend/: README.md
crates/viewguard-trend/src/: lib.rs
docs/: KEYMAP.md  PLUGIN-MANIFEST.md  ROADMAP.md  SETTINGS-COVERAGE.md  TWITCH-LIVE-FROM-START-INTEL.md  TWITCH-LIVE-FROM-START.md  WEBUI-RESEARCH.md  WRITING-A-PLUGIN.md
docs/archive/: ADVERSARIAL-REVIEW.md  README.md  jellyfin-elegantfin-custom.css
docs/product/: index.md
research/analysis/: SYNTHESIS.md  backend.md  ui-ux.md
research/exemplars/: INDEX.md  adjacent-media-apps.md  arr-suite-overview.md  design-ux-patterns.md  live-stream-recorders-survey.md  sonarr.md  streamlink.md  streamrec.md  tdarr.md  unmanic.md  ytarchive.md
scripts/: cluster_speakers.py  embed_chunks.py  gen-plugin-readmes.sh  install-dev.sh
src/: app.rs  daemon.rs  ipc.rs  lib.rs  state.rs  webhook.rs
src/config/: mod.rs
src/edl/: mod.rs  recorder.rs  render.rs  schema.rs
src/intents/: download_vod.rs  start.rs
src/licence/: cache.rs  client.rs
src/monitor/: mod.rs  patreon.rs
src/pipeline/: executor.rs  stage.rs
src/platform/: mod.rs  patreon.rs  twitch.rs  twitch_eventsub.rs  youtube.rs  youtube_websub.rs
src/playback/: mod.rs
src/plugin/: mod.rs  registry.rs
src/recording/: adtrim.rs  bulk.rs  catalog.rs  ffmpeg.rs  job.rs  mod.rs  persist.rs  remux.rs  scan.rs  schedule.rs  thumbnail.rs  trash.rs  vod_backfill.rs  watch_history.rs  ytdlp.rs
src/stream/: mod.rs  resolver.rs  twitch_rewind.rs
src/tasks/: mod.rs
src/tui/: clipboard.rs  keymap.rs  layout.rs  mod.rs  preview.rs
src/tui/anim/: glyphs.rs  mod.rs
src/tui/widgets/: channel_detail.rs  dialog.rs  empty_state.rs  event_log.rs  log_viewer.rs  mod.rs  palette.rs  pipeline_dag.rs  plugin_browser.rs  properties.rs  recording_list.rs  settings.rs  sidebar.rs  status_bar.rs  theme_picker.rs  wizard.rs
tests/: ipc_handshake.rs
