[package]
name = "strivo-demucs-split"
version = "0.1.0"
edition = "2021"
description = "Source separation wrapper for the demucs CLI. Pure-data model + command builder; the host invokes the binary."
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
