[package]
name = "strivo-pitch"
version = "0.1.0"
edition = "2021"
description = "DAW-style independent pitch / time-stretch — fit a recording to a publish slot without changing pitch, or transpose stingers without changing tempo. Wraps ffmpeg's rubberband filter."
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
