[package]
name = "strivo-sidechain"
version = "0.1.0"
edition = "2021"
description = "Sidechain compressor — VAD intervals → ducking automation curve baked at render"
authors = ["revelri <slrevoy@mailbox.org>"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strivo-vad = { path = "../vad" }
strivo-automation = { path = "../automation" }
